[package]
name = "qomalin_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
uuid = { version = "0.6.5", features = ["v4"]}
bcrypt = "0.10"

diesel = { version = "1.4.8", features = ["postgres", "chrono", "uuid", "bigdecimal", "num-bigint", "num-integer", "num-traits", "time", "numeric" ] }

tokio = { version = "0.2.21", features = ["full"] }
anyhow = "=1.0.36"
chrono = "=0.4.19"
bigdecimal = "0.1.2"
postgis = "0.9.0"
rust-crypto = "^0.2"
#numeric = { version= "0.1.4", features = ["num-bigint", "bigdecimal", "num-traits", "num-integer"]}

