[package]
name = "qomalin_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
uuid = { version = "0.6.5", features = ["v4", "serde"]}
bcrypt = "0.10"

diesel = { version = "1.4.8", features = ["postgres", "chrono", "uuid", "bigdecimal", "num-bigint", "num-integer", "num-traits", "time", "numeric", "r2d2" ] }

tokio = { version = "0.2.21", features = ["full"] }
anyhow = "=1.0.36"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = "0.1.2"
postgis = "0.9.0"
rust-crypto = "^0.2"
#numeric = { version= "0.1.4", features = ["num-bigint", "bigdecimal", "num-traits", "num-integer"]}

validator = { version = "0.14", features = ["derive"] }
log = "0.4"
env_logger = "0.8.4"
futures = "0.3.12"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
actix-multipart = "0.3"
mime_guess = "2.0.3"
infer = "0.3"